--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "name": "MySMAReader",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "slug": "modbus_inverter",
-  "description": "Sungrow-SMA Solar inverter communication Addon",
+  "description": "SMA Solar inverter communication Addon",
   "url": "https://github.com/karelvdvd/MySMAReader",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "services": [
@@ -20,7 +20,7 @@
   "schema": {
     "Inverter_IP": "str",
     "Inverter_port": "int",
-    "Model": "list(sma-SBn_n-1AV-40|sungrow-sg3kd|sungrow-sg3ks|sungrow-sg5kd|sungrow-sg8kd|sungrow-sg10kt|sungrow-sg10rt|sungrow-sh5k|sungrow-sh10rt|karel)",
+    "Model": "list(SMA)",
     "Scan_interval" : "int(10,600)",
     "Scan_timeout": "int(3,60)",
     "Log_level": "list(DEBUG|INFO|WARNING)"
